# Portal-Taller-de-Programacion-9508-

./: .gitignore  CMakeLists.txt  Makefile  README.md
client/include/: Area.h  FormatContext.h  OutputFormat.h  SdlTexture.h  SdlWindow.h  acid.h  background.h  block.h  bullet.h  button.h  cake.h  chell.h  client.h  entity.h  entityFactory.h  gameView.h  gate.h  inputManager.h  laser.h  login.h  pauseView.h  pin.h  portal.h  rock.h  serverManager.h  soundManager.h  textWidget.h  textureManager.h  updateReceiver.h  videoRecorder.h
client/src/: Area.cpp  FormatContext.cpp  OutputFormat.cpp  SdlException.cpp  SdlTexture.cpp  SdlWindow.cpp  acid.cpp  background.cpp  block.cpp  bullet.cpp  button.cpp  cake.cpp  chell.cpp  client.cpp  entityFactory.cpp  gameView.cpp  gate.cpp  inputManager.cpp  laser.cpp  login.cpp  main.cpp  pauseView.cpp  pin.cpp  portal.cpp  rock.cpp  serverManager.cpp  soundManager.cpp  textWidget.cpp  textureManager.cpp  updateReceiver.cpp  videoRecorder.cpp
common/include/: action.h  exceptions.h  gameInfo.h  key.h  keypad.h  lock.h  port.h  protected_queue.h  protocol.h  socket.h  thread.h  timer.h  types.h  update.h
common/src/: action.cpp  exceptions.cpp  gameInfo.cpp  key.cpp  keypad.cpp  protocol.cpp  socket.cpp  timer.cpp  update.cpp
config/: config.yaml
editor/: CMakeLists.txt  README  cmake.sh  editor_acido.cpp  editor_acido.h  editor_ajustes.cpp  editor_ajustes.h  editor_ajustes.ui  editor_barrera_de_energia.cpp  editor_barrera_de_energia.h  editor_bloque_de_metal.cpp  editor_bloque_de_metal.h  editor_bloque_de_metal_diagonal.cpp  editor_bloque_de_metal_diagonal.h  editor_bloque_de_roca.cpp  editor_bloque_de_roca.h  editor_boton.cpp  editor_boton.h  editor_celda_grafica.cpp  editor_celda_grafica.h  editor_componente_compuerta.cpp  editor_componente_compuerta.h  editor_compuerta.cpp  editor_compuerta.h  editor_compuerta_and.cpp  editor_compuerta_and.h  editor_compuerta_or.cpp  editor_compuerta_or.h  editor_compuerta_regular.cpp  editor_compuerta_regular.h  editor_defines.h  editor_emisor.cpp  editor_emisor.h  editor_escenario_grafico.cpp  editor_escenario_grafico.h  editor_excepcion.cpp  editor_excepcion.h  editor_item_grafico.cpp  editor_item_grafico.h  editor_item_logica.h  (+15 more)
editor/config/: config.yaml
editor/valgrind-supp/: minimal.supp  valgrind_supp.sh
libs/Box2D-master/: premake5.lua
libs/valgrind-supp/: minimal.supp
maps/: level_00.yaml  level_01.yaml
resources/scripts/: portal-client  portal-editor  portal-server
server/include/: accepter.h  broadcaster.h  contact_listener.h  disconnecter.h  game.h  game_loop.h  game_loop_def.h  inputReceiver.h  math_ext.h  pin.h  pin_def.h  player.h  playerLogin.h  ray_cast_closest_body_callback.h  serializer.h  server.h  stage.h  stage_def.h  updateSender.h  world.h  world_config.h  world_def.h
server/include/bodies/: body.h
server/include/boolean_suppliers/: and_operator.h  binary_block.h  binary_operator.h  boolean_block.h  boolean_block_factory.h  boolean_operator.h  boolean_supplier.h  not_operator.h  or_operator.h  same_operator.h  simple_boolean.h  unary_block.h  unary_operator.h
server/include/instructions/: create_bullet_instruction.h  default_instruction.h  desactivate_body_instruction.h  destroy_body_instruction.h  fire_portal_instruction.h  grab_rock_instruction.h  instruction.h  instruction_factory.h  jig_instruction.h  jump_instruction.h  pinInstruction.h  press_grab_instruction.h  release_rock_instruction.h  reset_portals_instruction.h  run_left_instruction.h  run_right_instruction.h  set_linear_velocity_instruction.h  stop_grab_instruction.h  stop_left_instruction.h  stop_right_instruction.h  teleport_body_instruction.h  transform_body_instruction.h
server/src/: accepter.cpp  broadcaster.cpp  contact_listener.cpp  disconnecter.cpp  game.cpp  game_loop.cpp  inputReceiver.cpp  main.cpp  math_ext.cpp  pin.cpp  player.cpp  playerLogin.cpp  ray_cast_closest_body_callback.cpp  serializer.cpp  server.cpp  stage.cpp  updateSender.cpp  world.cpp
server/src/bodies/: body.cpp
server/src/boolean_suppliers/: and_operator.cpp  binary_block.cpp  binary_operator.cpp  boolean_block.cpp  boolean_block_factory.cpp  boolean_operator.cpp  boolean_supplier.cpp  not_operator.cpp  or_operator.cpp  same_operator.cpp  simple_boolean.cpp  unary_block.cpp  unary_operator.cpp
server/src/instructions/: create_bullet_instruction.cpp  default_instruction.cpp  desactivate_body_instruction.cpp  destroy_body_instrucion.cpp  fire_portal_instruction.cpp  grab_rock_instruction.cpp  (+16 more)
test/common/: key_test.h  keypad_test.h  protected_queue_test.h
test/server/: acid_test.h  binary_block_test.h  boolean_block_factory_test.h  bullet_test.h  cake_test.h  chell_test.h  destroy_body_instruction_test.h  gate_test.h  launcher_test.h  portal_gun_test.h  portal_test.h  receiver_test.h  rock_test.h  simple_boolean_test.h  template-test.h  world_test.h
(+82 files in other folders)
